Fix sonarlint suggestions
Signed-off-by: Preslav Stoyanov <preslav.stoyanov@egt-digital.com>